# hac

./: .gitignore  Cargo.toml  Justfile  README.md
.github/: dependabot.yml
.github/workflows/: general.yml
hac-cli/: Cargo.toml
hac-client/: Cargo.toml
hac-client/src/: components.rs
hac-client/src/components/: component_styles.rs
hac-client/src/pages/: spinner.rs  under_construction.rs
hac-client/src/pages/collection_viewer/: request_editor.rs  response_viewer.rs
hac-client/src/pages/collection_viewer/request_editor/: body_editor.rs
hac-client/src/pages/collection_viewer/request_editor/auth_editor/: auth_editor.rs  auth_kind_prompt.rs
hac-client/src/pages/collection_viewer/request_editor/headers_editor/: headers_editor.rs  headers_editor_delete_prompt.rs  headers_editor_edit_form.rs
hac-client/src/pages/collection_viewer/sidebar/: create_directory_form.rs  create_request_form.rs  delete_item_prompt.rs  edit_directory_form.rs  edit_request_form.rs  select_request_parent.rs
hac-colors/: Cargo.toml
hac-config/: Cargo.toml
hac-config/src/: config.rs  default_config.rs
hac-core/src/: text_object.rs
hac-core/src/collection/: errors.rs
hac-core/src/syntax/: highlighter.rs
hac-core/src/text_object/: character.rs  line_break.rs  text_object.rs
