[workspace]
members = ["hac-config", "hac-core", "hac-client", "hac-colors", "hac-cli"]
default-members = ["hac-client"]
resolver = "2"

[workspace.metadata.crane]
name = "hac"

[workspace.package]
version = "0.2.0"

[workspace.dependencies]
hac-config = { path = "hac-config" }
hac-core = { path = "hac-core" }
hac-colors = { path = "hac-colors" }
hac-cli = { path = "hac-cli" }

anyhow = "1.0.100"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
ratatui = { version = "0.28.1", features = ["all-widgets", "crossterm"] }
tree-sitter = "0.25.10"
tree-sitter-json = "0.24"
divan = "0.1.21"
lazy_static = "1.5"
